--- a/css/css-demo/practice.css
+++ b/css/css-demo/practice.css
@@ -1,3 +1,9 @@
 #contact-info{
 	font-size: .8em;
 }
+.job{
+	background-color: #e9e5dc;
+	padding-bottom: 5px;  
+	margin-top: 5px;
+	margin-bottom: 5px;
+}
