--- a/web_dev/sinatra_templating/views/authors.erb
+++ b/web_dev/sinatra_templating/views/authors.erb
@@ -1,1 +1,10 @@
-authors.erb
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Famous Authors</title>
+</head>
+<body>
+<h1>Famous Authors and Their Works</h1>
+
+</body>
+</html>
