Add Form to file

--- a/web_dev/sinatra_templating/views/new_campus.erb
+++ b/web_dev/sinatra_templating/views/new_campus.erb
@@ -1,1 +1,14 @@
-new_campus.erb
+<!DOCTYPE html>
+<html>
+<head>
+	<title>New Campus Application</title>
+</head>
+<body>
+	<p>Add New Campus Here!</p>
+	<form action="/new/campus" method="POST">
+		<input type="text" name="name" placeholder="Location">
+		<button type="submit">Save New Location</button>
+	</form>
+	
+</body>
+</html>
